src/test/ui/rfc-2497-if-let-chains/syntax-ambiguity-2018.stderr
error: ambigious use of `&&`
  --> $DIR/syntax-ambiguity-2018.rs:21:47
   |
LL |     if let Range { start: _, end: _ } = true..true && false { }
   |                                               ^^^^^^^^^^^^^ help: consider adding parenthesis: `(true && false)`
   |
   = note: This will be a error until the `let_chains` feature is stabilized.

error: ambigious use of `||`
  --> $DIR/syntax-ambiguity-2018.rs:24:47
   |
LL |     if let Range { start: _, end: _ } = true..true || false { }
   |                                               ^^^^^^^^^^^^^ help: consider adding parenthesis: `(true || false)`
   |
   = note: This will be a error until the `let_chains` feature is stabilized.

error: ambigious use of `&&`
  --> $DIR/syntax-ambiguity-2018.rs:27:50
   |
LL |     while let Range { start: _, end: _ } = true..true && false { }
   |                                                  ^^^^^^^^^^^^^ help: consider adding parenthesis: `(true && false)`
   |
   = note: This will be a error until the `let_chains` feature is stabilized.

error: ambigious use of `||`
  --> $DIR/syntax-ambiguity-2018.rs:30:50
   |
LL |     while let Range { start: _, end: _ } = true..true || false { }
   |                                                  ^^^^^^^^^^^^^ help: consider adding parenthesis: `(true || false)`
   |
   = note: This will be a error until the `let_chains` feature is stabilized.

error: ambigious use of `&&`
  --> $DIR/syntax-ambiguity-2018.rs:33:19
   |
LL |     if let true = false && false { }
   |                   ^^^^^^^^^^^^^^ help: consider adding parenthesis: `(false && false)`
   |
   = note: This will be a error until the `let_chains` feature is stabilized.

error: ambigious use of `&&`
  --> $DIR/syntax-ambiguity-2018.rs:36:22
   |
LL |     while let true = (1 == 2) && false { }
   |                      ^^^^^^^^^^^^^^^^^ help: consider adding parenthesis: `((1 == 2) && false)`
   |
   = note: This will be a error until the `let_chains` feature is stabilized.

error: aborting due to 6 previous errors

